--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -195,7 +195,7 @@
   "WelcomeHomeUpdateNote": "V2.0.2 - 02/26/19 - Reworked how the messages are stored. Added option to have random greetings. Removed Greeting and Message from Parent app.",
   
   "WhatDidISayType": "Driver",
-  "WhatDidISayDriver1Version": "v1.0.3",
+  "WhatDidISayDriver1Version": "v1.0.4",
   "WhatDidISayDriver2Version": "NA",
   "WhatDidISayDriver3Version": "NA",
   "WhatDidISayDriver4Version": "NA",
@@ -214,5 +214,5 @@
   "WhatDidISayDriver5Name": "NA",
   "WhatDidISayDriver6Name": "NA",
   "WhatDidISayDiscussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
-  "WhatDidISayUpdateNote": "NA",
+  "WhatDidISayUpdateNote": "V1.0.4 - 03/02/19 - Fix the date being display on tile",
 }
