--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -116,13 +116,13 @@
   
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v1.1.0",
-  "DeviceWatchdogChildVersion": "v1.2.3",
+  "DeviceWatchdogChildVersion": "v1.2.4",
   "DeviceWatchdogDriverVersion": "V1.0.1",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
-  "DeviceWatchdogUpdateNote": "V1.2.2 - 02/26/19 - Attempt to fix an error in the new Device Status reporting",
+  "DeviceWatchdogUpdateNote": "V1.2.4 - 03/03/19 - Functions cleanup. Changes by @gabriele",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
