--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -9,14 +9,14 @@
   "App06": "Device Sequencer",
   "App07": "Device Watchdog",
   "App08": "Lighting Effects",
-  "App09": "Motion Controlled Scene Lighting",
-  "App10": "Notifier Plus",
-  "App11": "One at a Time",
-  "App12": "Send IP2IR",
-  "App13": "Web Pinger",
-  "App14": "Welcome Home",
-  "App15": "What Did I Say",
-  "App16": "",
+  "App09": "Magic Cube",
+  "App10": "Motion Controlled Scene Lighting",
+  "App11": "Notifier Plus",
+  "App12": "One at a Time",
+  "App13": "Send IP2IR",
+  "App14": "Web Pinger",
+  "App15": "Welcome Home",
+  "App16": "What Did I Say",
   "App17": "",
   "App18": "",
   "App19": "",
@@ -133,6 +133,16 @@
   "LightingEffectsDriverRawCode": "NA",
   "LightingEffectsDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
   "LightingEffectsUpdateNote": "NA",
+  
+  "MagicCubeType": "App",
+  "MagicCubeParentVersion": "V1.0.0",
+  "MagicCubeChildVersion": "V1.0.0",
+  "MagicCubeDriverVersion": "NA",
+  "MagicCubeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
+  "MagicCubeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy",
+  "MagicCubeDriverRawCode": "NA",
+  "MagicCubeDiscussion": "NA",
+  "MagicCubeUpdateNote": "V1.0.0 - 3/14/19 - Inital Release",
   
   "MotionControlledSceneLightingType": "App",
   "MotionControlledSceneLightingParentVersion": "v1.0.3",
