--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -6,19 +6,19 @@
   "App03": "App Watchdog",
   "App04": "At Home Simulator",
   "App05": "BI Control",
-  "App06": "Device Sequencer",
-  "App07": "Device Watchdog",
-  "App08": "Lighting Effects",
-  "App09": "Magic Cube",
-  "App10": "Motion Controlled Scene Lighting",
-  "App11": "Notifier Plus",
-  "App12": "One at a Time",
-  "App13": "Send IP2IR",
-  "App14": "Web Pinger",
-  "App15": "Welcome Home",
-  "App16": "What Did I Say",
-  "App17": "",
-  "App18": "",
+  "App06": "Departures",
+  "App07": "Device Sequencer",
+  "App08": "Device Watchdog",
+  "App09": "Lighting Effects",
+  "App10": "Magic Cube",
+  "App11": "Motion Controlled Scene Lighting",
+  "App12": "Notifier Plus",
+  "App13": "One at a Time",
+  "App14": "Send IP2IR",
+  "App15": "Web Pinger",
+  "App16": "Welcome Home",
+  "App17": "What Did I Say",
+  "App18": "Departures",
   "App19": "",
   "App20": "",
   
@@ -103,6 +103,16 @@
   "BIControlDriverRawCode": "NA",
   "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
   "BIControlUpdateNote": "NA",
+  
+  "DeparturesType": "App",
+  "DeparturesParentVersion": "v1.0.0",
+  "DeparturesChildVersion": "v1.0.0",
+  "DeparturesDriverVersion": "NA",
+  "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
+  "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
+  "DeparturesDriverRawCode": "NA",
+  "DeparturesDiscussion": "NA",
+  "DeparturesUpdateNote": "V1.0.0 - 03/15/19 - Initial release.",
   
   "DeviceSequencerType": "App",
   "DeviceSequencerParentVersion": "v1.0.2",
