--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -111,7 +111,7 @@
   "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
   "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
   "DeparturesDriverRawCode": "NA",
-  "DeparturesDiscussion": "NA",
+  "DeparturesDiscussion": "https://community.hubitat.com/t/release-departures/12039",
   "DeparturesUpdateNote": "V1.0.0 - 03/15/19 - Initial release.",
   
   "DeviceSequencerType": "App",
