--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -15,11 +15,11 @@
   "App12": "Notifier Plus",
   "App13": "One at a Time",
   "App14": "Send IP2IR",
-  "App15": "Web Pinger",
-  "App16": "Welcome Home",
-  "App17": "What Did I Say",
-  "App18": "Departures",
-  "App19": "",
+  "App15": "Snapshot",
+  "App16": "Web Pinger",
+  "App17": "Welcome Home",
+  "App18": "What Did I Say",
+  "App19": "Departures",
   "App20": "",
   
   "ExampleType": "App",
@@ -193,6 +193,16 @@
   "SendIP2IRDriverRawCode": "NA",
   "SendIP2IRDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
   "SendIP2IRUpdateNote": "NA",
+  
+  "SnapshotType": "App",
+  "SnapshotParentVersion": "v1.0.0",
+  "SnapshotChildVersion": "v1.0.0",
+  "SnapshotDriverVersion": "v1.0.0",
+  "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
+  "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
+  "SnapshotDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-driver.groovy",
+  "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
+  "SnapshotUpdateNote": "V1.0.0 - 03/16/19 - Initial release",
   
   "WebPingerType": "App",
   "WebPingerParentVersion": "v1.0.2",
