--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -9,17 +9,17 @@
   "App06": "Departures",
   "App07": "Device Sequencer",
   "App08": "Device Watchdog",
-  "App09": "Lighting Effects",
-  "App10": "Magic Cube",
-  "App11": "Motion Controlled Scene Lighting",
-  "App12": "Notifier Plus",
-  "App13": "One at a Time",
-  "App14": "Send IP2IR",
-  "App15": "Snapshot",
-  "App16": "Web Pinger",
-  "App17": "Welcome Home",
-  "App18": "What Did I Say",
-  "App19": "Departures",
+  "App09": "Follow Me",
+  "App10": "Lighting Effects",
+  "App11": "Magic Cube",
+  "App12": "Motion Controlled Scene Lighting",
+  "App13": "Notifier Plus",
+  "App14": "One at a Time",
+  "App15": "Send IP2IR",
+  "App16": "Snapshot",
+  "App17": "Web Pinger",
+  "App18": "Welcome Home",
+  "App19": "What Did I Say",
   "App20": "",
   
   "ExampleType": "App",
@@ -133,6 +133,16 @@
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
   "DeviceWatchdogUpdateNote": "V1.2.5 - 03/03/19 - Removed some error checking put in v1.2.2 - If you have a device causing an error in the Device Status reporting, you will need to remove the device from this app rather than the app catching it.",
+  
+  "FollowMeType": "App",
+  "FollowMeParentVersion": "v1.0.0",
+  "FollowMeChildVersion": "v1.0.0",
+  "FollowMeDriverVersion": "NA",
+  "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
+  "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
+  "FollowMeDriverRawCode": "NA",
+  "FollowMeDiscussion": "NA",
+  "FollowMeUpdateNote": "V1.0.0 - 03/17/19 - Initial release",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
