--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -136,13 +136,13 @@
   
   "FollowMeType": "App",
   "FollowMeParentVersion": "v1.0.0",
-  "FollowMeChildVersion": "v1.0.0",
+  "FollowMeChildVersion": "v1.0.1",
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
   "FollowMeDriverRawCode": "NA",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
-  "FollowMeUpdateNote": "V1.0.0 - 03/17/19 - Initial release",
+  "FollowMeUpdateNote": "V1.0.1 - 03/19/19 - Fixed a typo, trying to fix the always on",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
