--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -66,13 +66,13 @@
   
   "AbacusTimeTravelerType": "App",
   "AbacusTimeTravelerParentVersion": "v1.0.4",
-  "AbacusTimeTravelerChildVersion": "v1.0.4",
+  "AbacusTimeTravelerChildVersion": "v1.0.5",
   "AbacusTimeTravelerDriverVersion": "NA",
   "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
   "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
   "AbacusTimeTravelerDriverRawCode": "NA",
-  "AbacusTimeTravelerDiscussion": "V1.0.4 - 02/16/19 - Big maintenance release. Reworked a lot of code as I continue to learn new things.",
-  "AbacusTimeTravelerUpdateNote": "NA",
+  "AbacusTimeTravelerDiscussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
+  "AbacusTimeTravelerUpdateNote": "V1.0.5 - 03/22/19 - Maintenance release to prepare for V2.0.0. You will need this version to save all of your stats!",
 
   "AppWatchdogType": "App",
   "AppWatchdogParentVersion": "v1.0.0",
