--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -206,13 +206,13 @@
   
   "SnapshotType": "App",
   "SnapshotParentVersion": "v1.0.0",
-  "SnapshotChildVersion": "v1.0.1",
-  "SnapshotDriverVersion": "v1.0.1",
+  "SnapshotChildVersion": "v1.0.2",
+  "SnapshotDriverVersion": "v1.0.3",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
   "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
   "SnapshotDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-driver.groovy",
   "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
-  "SnapshotUpdateNote": "V1.0.1 - 03/22/19 - Major update to comply with Hubitat's new dashboard requirements.",
+  "SnapshotUpdateNote": "V1.0.2 - 03/30/19 - Added ability to select what type of data to report: Full, Only On/Off, Only Open/Closed. Also added count attributes.",
   
   "WebPingerType": "App",
   "WebPingerParentVersion": "v1.0.2",
