--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -225,14 +225,14 @@
   "WebPingerUpdateNote": "NA",
   
   "WelcomeHomeType": "App",
-  "WelcomeHomeParentVersion": "v2.0.1",
-  "WelcomeHomeChildVersion": "v2.0.4",
+  "WelcomeHomeParentVersion": "v2.0.2",
+  "WelcomeHomeChildVersion": "v2.0.5",
   "WelcomeHomeDriverVersion": "v1.0.0",
   "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
   "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
   "WelcomeHomeDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Driver.groovy",
   "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
-  "WelcomeHomeUpdateNote": "V2.0.4 - 03/22/19 - Added a new option: restoreVolume for Echo Speaks devices",
+  "WelcomeHomeUpdateNote": "V2.0.5 - 04/06/19 - Added importUrl. Volume Control overhaul. Code cleanup.",
   
   "WhatDidISayType": "Driver",
   "WhatDidISayDriver1Version": "v1.1.0",
