--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -206,13 +206,13 @@
   
   "SnapshotType": "App",
   "SnapshotParentVersion": "v1.0.0",
-  "SnapshotChildVersion": "v1.0.9",
+  "SnapshotChildVersion": "v1.1.0",
   "SnapshotDriverVersion": "v1.0.6",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
   "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
   "SnapshotDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-driver.groovy",
   "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
-  "SnapshotUpdateNote": "V1.0.9 - 04/10/19 - Fixed a typo in repeatSwitchHandler",
+  "SnapshotUpdateNote": "V1.1.0 - 04/12/19 - Added voice and pushover notifications to Priority Devices",
   
   "WebPingerType": "App",
   "WebPingerParentVersion": "v1.0.2",
