--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -96,13 +96,13 @@
   
   "BIControlType": "App",
   "BIControlParentVersion": "v1.0.5",
-  "BIControlChildVersion": "v1.0.5",
+  "BIControlChildVersion": "v1.0.7",
   "BIControlDriverVersion": "NA",
   "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
   "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
   "BIControlDriverRawCode": "NA",
   "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
-  "BIControlUpdateNote": "NA",
+  "BIControlUpdateNote": "V1.0.7 - 04/15/19 - Code cleanup,
   
   "DeparturesType": "App",
   "DeparturesParentVersion": "v1.0.0",
