--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -196,13 +196,13 @@
   
   "SendIP2IRType": "App",
   "SendIP2IRParentVersion": "v1.1.7",
-  "SendIP2IRChildVersion": "v1.1.7",
+  "SendIP2IRChildVersion": "v1.1.8",
   "SendIP2IRDriverVersion": "NA",
   "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
   "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
   "SendIP2IRDriverRawCode": "NA",
   "SendIP2IRDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
-  "SendIP2IRUpdateNote": "NA",
+  "SendIP2IRUpdateNote": "V1.1.8 - 04/15/19 - Code cleanup",
   
   "SnapshotType": "App",
   "SnapshotParentVersion": "v1.0.0",
