--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -126,13 +126,13 @@
   
   "DeviceWatchdogType": "App",
   "DeviceWatchdogParentVersion": "v1.1.0",
-  "DeviceWatchdogChildVersion": "v1.3.1",
+  "DeviceWatchdogChildVersion": "v1.3.2",
   "DeviceWatchdogDriverVersion": "V1.0.4",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
-  "DeviceWatchdogUpdateNote": "V1.3.1 - 04/15/19 - More Code cleanup",
+  "DeviceWatchdogUpdateNote": "V1.3.2 - 04/22/19 - Put a trap in to catch devices that have no previous activity.",
   
   "FollowMeType": "App",
   "FollowMeParentVersion": "v1.0.0",
